--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@goorm-dev/vapor-hooks": "^0.19.1",
     "@goorm-dev/vapor-icons": "^0.19.1",
     "@goorm-dev/vapor-tables": "^0.19.1",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
